# lidar

./: .gitignore  .lvimrc  CMakeLists.txt
include/: VelodyneCapture.h  visualizer.h  vlpmap.h
include/slam/: common.h  feature_extraction.h  mapping.h  math_utils.h  odometry.h  scan_grabber.h  vlpslam.h
include/slam/types/: Angle.h  Quaternion.h  Rotation.h  Transform.h  Vector3.h
src/: visualizer.cpp  vlpmap.cpp
src/slam/: _old.cpp  feature_extraction.cpp  mapping.cpp  odometry.cpp  scan_grabber.cpp  vlpslam.cpp
src/slam/types/: Angle.cpp  Quaternion.cpp  Rotation.cpp  Transform.cpp  Vector3.cpp
test/: scan_grabber_test.cpp  time_lapse.h  vlpmap_test.cpp
test/slam/: feature_extraction_test.cpp  mapping_test.cpp  odometry_test.cpp
